tests/transpiler/x/py/load_yaml.py
# Code generated by Mochi v0.10.34 - DO NOT EDIT
from dataclasses import dataclass
from typing import List, Dict

@dataclass
class Person:
    name: str
    age: int
    email: str

@dataclass
class People:
    age: int
    email: str
    name: str

people = [People(30, "alice@example.com", "Alice"), People(15, "bob@example.com", "Bob"), People(20, "charlie@example.com", "Charlie")]
@dataclass
class Adult:
    name: str
    email: str

adults = [Adult(p.name, p.email) for p in people if p.age >= 18]
for a in adults:
    print(" ".join(str(x) for x in [a["name"], a["email"]]).rstrip())
